# FMRI

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: compare.rs  fmri_list.rs  helpers.rs  lib.rs  publisher.rs  tests.rs  version.rs
src/tests/: fmri_test.rs  helpers_test.rs  publisher_test.rs  version_test.rs
src/version/: segment.rs  segments.rs
