[package]
name = "fmri"
version = "0.2.1"
edition = "2021"
authors = ["Maroš Telka <maros@telka.sk>"]
description = "Implementation of IPS package identifier - FMRI"
readme = "README.md"
license = "MIT"
repository = "https://github.com/aueam/FMRI"
keywords = ["lib", "pkg", "oi", "fmri"]

[dependencies]
serde = { version = "1", features = ["derive"] }
